# base-builder-rs

./: Dockerfile  Makefile  conf.sh  config.mak  install.sh  versions.env
.github/workflows/: check-rust-version.yml  dockerpublish.yml  pr.yml
scripts/: install_curl.sh  install_libpsl.sh  install_openssl.sh  install_sqlite.sh  install_zlib.sh
validate/: .dockerignore  Cargo.toml  Dockerfile
validate/src/: lib.rs  main.rs
