[package]
name = "validate"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.30.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["server", "http1"] }
hyper-tls = "0.5"
libz-sys = { version = "1.1.0", default-features = false, features = ["libc"] }
curl = "0.4"
